# intelligent-traffic-control-system

./: .env.example  .gitignore  ALGORITHM_EXPLANATION.md  CameraA.md  FILES_RESPONSIBILITY.md  FINAL_FIX_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_STATE.md  README.md  REFACTORING_PLAN.md  TESTING_GUIDE.md  TRAFFIC_CONTROL_FIX_SUMMARY.md  TRAFFIC_LIGHT_FIX_SUMMARY.md  dune_article.html  main.py  pyproject.toml  task_progress.md
Scene/Diplom_scene/: PERFORMANCE_OPTIMIZATIONS.md
Scene/Diplom_scene/Assets/: New Material 3.mat  New Material 4.mat  New Material 5.mat
Scene/Diplom_scene/Assets/Editor/: TransformWorldCopier.cs
Scene/Diplom_scene/Assets/Materials/: New Material 1.mat  New Material 2.mat  New Material.mat
Scene/Diplom_scene/Assets/Prefabs/: Bus_1.prefab  Bus_2.prefab  Camera.prefab  Camera_Prefab.prefab  Car_1 1.prefab  Car_2.prefab  Car_3.prefab  Car_4.prefab  Deffualt_road.prefab  Intersection_prefab 1.prefab  Intersection_prefab.prefab  Police_car.prefab  Taxi.prefab  TurnRoad_prefab 2.prefab
Scene/Diplom_scene/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
backend/: main.py  server_receiver.py  test_green_wave.py  verify_green_wave.py
backend/UI/: admin_panel.py
backend/UI/ui/: __init__.py  map.py  panels.py
backend/core/: createModel.py  emergency.py  lane_utils.py  logger.py  road_config.py
backend/models/: traffic.py
backend/services/: cloud_orchestrator.py  graph_manager.py  green_wave.py  orchestrator.py  phase_manager.py  statistics.py  traffic_brain.py
cv_module/: detector.py
(+90 files in other folders)
